<resources>

    <string name="app_name">Calculator</string>
    <string name="app_divide">/</string>
    <string name="app_delete">DEL</string>
    <string name="app_clear">C</string>
    <string name="app_multiply">*</string>
    <string name="app_minus">-</string>
    <string name="app_plus">+</string>
    <string name="app_equal">=</string>

    <string name="btn_.">.</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>

</resources>
