<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_clear"
            android:text="@string/app_clear"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_del"
            android:layout_marginLeft="10dp"
            android:text="@string/app_delete"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_divide"
            android:layout_marginLeft="10dp"
            android:text="@string/app_divide"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_multiply"
            android:layout_marginLeft="10dp"
            android:text="@string/app_multiply"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_7"
            android:text="@string/btn_7"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_8"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_8"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_9"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_9"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_minus"
            android:layout_marginLeft="10dp"
            android:text="-"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_4"
            android:text="@string/btn_4"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_5"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_5"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_6"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_6"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/but_plus"
            android:layout_marginLeft="10dp"
            android:text="@string/app_plus"
            android:textSize="30sp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:gravity="right|bottom"/>

    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="280dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:id="@+id/but_1"
                    android:text="@string/btn_1"
                    android:textSize="30sp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="right|bottom"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:id="@+id/but_2"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_2"
                    android:textSize="30sp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="right|bottom"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:id="@+id/but_3"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_3"
                    android:textSize="30sp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="right|bottom"/>

            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:id="@+id/but_0"
                    android:text="@string/btn_0"
                    android:textSize="30sp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="right|bottom"/>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:id="@+id/but_point"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_."
                    android:textSize="30sp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="right|bottom"/>


                />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="75dp"
                android:layout_height="130dp"
                android:id="@+id/but_equal"
                android:layout_marginLeft="10dp"
                android:text="@string/app_equal"
                android:textSize="30sp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:gravity="right|bottom"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="23dp"
            android:id="@+id/et_output"
            android:editable="false"
            android:background="@null"
            android:gravity="right|bottom"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_input"
            android:editable="false"
            android:gravity="right|bottom" />

    </LinearLayout>

</RelativeLayout>
